--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="col-md-6">
           <div class="img_container">
             <div class="img-box b1">
-              <img src="images/logosampad.png" alt="" />
+              <img src="https://download1979.mediafire.com/z5lxjw97dj3gc1AadE_iUSFyPdOz69fOIZKxXd4ati2as1Ihw4h1REU6DHtJ7NFe4JRjs8lpm9lI5HP8MbZEzDd2isACFETX6EqLm88d1Wm6cLZxZE3bKreJwJ1ywTMpY0nATSj9RX53RZxMa3RoVZ3vR8eU8Cwo-cUzeerftpY1rg/0bywmmd4vzkw29n/logosampad.png" alt="" />
             </div>
           </div>
 
