--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="col-md-6">
           <div class="map_container">
             <div class="map-responsive">
-              <iframe src="https://maps.app.goo.gl/yTLVvwenMeadgXLE6" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3077.6375551101023!2d51.503092075595234!3d35.754654972563706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f8e034889223ff7%3A0x2e2cafec949ba306!2sAllameh%20Helli%202%20high%20school!5e1!3m2!1sen!2s!4v1746011960284!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
@@ -177,7 +177,7 @@
         <div class="row">
           <div class="col-md-4">
             <a href="">
-              <img src="images/location-white.png" alt="">
+              <img src="https://download1321.mediafire.com/5k0e4vjy2qvgKU1JJxtbT5att_4RISfxxjb1BVgtoYA_s0XJfflgHFrhTbuOA1rbV9DX7tdVSQd5xtVr_4QWXuMgZiz_5T9NE6Srq_OIe1V6EuRu-sevVkIXeho1s1H1Q-DkTNPgvn_q7FnLcfJqiefYs7yn1FuILyZ1rCTuiQyIoQ/zwpzjfwhm254fbr/location-white.png" alt="">
               <span>
                 علامه حلی 2، دوره اول
               </span>
@@ -185,7 +185,7 @@
           </div>
           <div class="col-md-4">
             <a href="">
-              <img src="images/telephone-white.png" alt="">
+              <img src="https://download1324.mediafire.com/au9fxeyxzxygzOny5hAsSbd8Ssfy-UZs-d8C-Qzy4RbnErF4yPshwCG9sgcuRfDDHjaAW_akVHJbYndJE9KyawaPgzLMfcLrZ0S3J9GilnsmhFhUdDxSUSYR2Lb-bK0EM90hlDE2H7VKDKjYOK4NI34CFArJSissXvMbQ9IdxgJqOA/wyzq7fjkrhzrz8j/telephone-white.pngg" alt="">
               <span>
                 09122502737 (سرگروه)
               </span>
@@ -193,7 +193,7 @@
           </div>
           <div class="col-md-4">
             <a href="">
-              <img src="images/envelope-white.png" alt="">
+              <img src="https://download947.mediafire.com/4ns5j4i743bg92wuSmfTCQKmveH7pnfIcXgEKg4Zg89xEGZnKXm1KHjsyhDvqtFISwgexJCfVTngRdnicsriTTN7gO2vOmHdN-p4ZBg_YQYB-eVg88ytU5gMASGtViWTycp6Shig1GOqzsRjcuho32FOXcPiYXRLAsAP8v90e5nQYA/7gmcmv2bivscqa4/envelope-white.png" alt="">
               <span>
                 behsafarinezhad@gmail.com (سرگروه)
               </span>
