--- a/index.html
+++ b/index.html
@@ -216,22 +216,17 @@
           <div class="info_social">
             <div>
               <a href="">
-                <img src="images/fb.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/twitter.png" alt="">
+                <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/fb_a2dr.png" border="0" alt="آپلود عکس" /></a>
               </a>
             </div>
             <div>
               <a href="https://www.linkedin.com/in/behrad-safarinezhad-854567307/">
-                <img src="images/linkedin.png" alt="">
+                <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/linkedin_r54n.png" border="0" alt="آپلود عکس" /></a>
               </a>
             </div>
             <div>
               <a href="">
-                <img src="images/instagram.png" alt="">
+                <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/instagram_vjay.png" border="0" alt="آپلود عکس" /></a>
               </a>
             </div>
           </div>
