--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="col-md-6">
           <div class="img_container">
             <div class="img-box b1">
-              <img src="https://download1979.mediafire.com/mwv57v5s8d5g3mgAVSxIVjDqwI1_ym6YQXCaXKhAe_v0CToSqQd75QABv2Doyg_utY7I9Mxts-0eHgPHb_GiDvaW4buMuoH8vofGAexpMBgB2W2XsHqUYcL--p0Oh9b0TKimN3xstPuu3WkR5gNCelzBaYPdX7M24OFbtjuE0LcGGw/0bywmmd4vzkw29n/logosampad.png" alt="" />
+              <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/logosampad_sard.png" border="0" alt="آپلود عکس" /></a>
             </div>
           </div>
 
@@ -177,7 +177,7 @@
         <div class="row">
           <div class="col-md-4">
             <a href="">
-              <img src="https://download1321.mediafire.com/5k0e4vjy2qvgKU1JJxtbT5att_4RISfxxjb1BVgtoYA_s0XJfflgHFrhTbuOA1rbV9DX7tdVSQd5xtVr_4QWXuMgZiz_5T9NE6Srq_OIe1V6EuRu-sevVkIXeho1s1H1Q-DkTNPgvn_q7FnLcfJqiefYs7yn1FuILyZ1rCTuiQyIoQ/zwpzjfwhm254fbr/location-white.png" alt="">
+              <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/location-white_murz.png" border="0" alt="آپلود عکس" /></a>
               <span>
                 علامه حلی 2، دوره اول
               </span>
@@ -185,7 +185,7 @@
           </div>
           <div class="col-md-4">
             <a href="">
-              <img src="https://download1324.mediafire.com/au9fxeyxzxygzOny5hAsSbd8Ssfy-UZs-d8C-Qzy4RbnErF4yPshwCG9sgcuRfDDHjaAW_akVHJbYndJE9KyawaPgzLMfcLrZ0S3J9GilnsmhFhUdDxSUSYR2Lb-bK0EM90hlDE2H7VKDKjYOK4NI34CFArJSissXvMbQ9IdxgJqOA/wyzq7fjkrhzrz8j/telephone-white.pngg" alt="">
+              <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/telephone-white_42fq.png" border="0" alt="آپلود عکس" /></a>
               <span>
                 09122502737 (سرگروه)
               </span>
