--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
         <div class="col-md-6">
           <div class="map_container">
             <div class="map-responsive">
-              <iframe src="https://maps.app.goo.gl/yTLVvwenMeadgXLE6" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3077.6375551101023!2d51.503092075595234!3d35.754654972563706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f8e034889223ff7%3A0x2e2cafec949ba306!2sAllameh%20Helli%202%20high%20school!5e1!3m2!1sen!2s!4v1746011960284!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
@@ -123,7 +123,7 @@
         <div class="row">
           <div class="col-md-4">
             <a href="">
-              <img src="images/location-white.png" alt="">
+              <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/location-white_ysz.png" border="0" alt="آپلود عکس" /></a>
               <span>
                 علامه حلی 2، دوره اول
               </span>
@@ -131,7 +131,7 @@
           </div>
           <div class="col-md-4">
             <a href="">
-              <img src="images/telephone-white.png" alt="">
+              <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/telephone-white_hgje.png" border="0" alt="آپلود عکس" /></a>
               <span>
                 09122502737 (سرگروه)
               </span>
@@ -139,7 +139,7 @@
           </div>
           <div class="col-md-4">
             <a href="">
-              <img src="images/envelope-white.png" alt="">
+              <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/envelope-white_zpvs.png" border="0" alt="آپلود عکس" /></a>
               <span>
                 behsafarinezhad@gmail.com (سرگروه)
               </span>
@@ -162,22 +162,17 @@
           <div class="info_social">
             <div>
               <a href="">
-                <img src="images/fb.png" alt="">
+                <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/fb_a2dr.png" border="0" alt="آپلود عکس" /></a>
               </a>
             </div>
             <div>
               <a href="">
-                <img src="images/twitter.png" alt="">
+                <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/linkedin_r54n.png" border="0" alt="آپلود عکس" /></a>
               </a>
             </div>
             <div>
               <a href="">
-                <img src="images/linkedin.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/instagram.png" alt="">
+                <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/instagram_vjay.png" border="0" alt="آپلود عکس" /></a>
               </a>
             </div>
           </div>
