--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
         <div class="col-md-6">
           <div class="img_container">
             <div class="img-box b1">
-              <img src="images/logosampad.png" alt="" />
+              <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/logosampad_4t1p.png" border="0" alt="آپلود عکس" /></a>
             </div>
           </div>
 
@@ -116,7 +116,7 @@
         <div class="row">
           <div class="col-md-4">
             <a href="">
-              <img src="images/location-white.png" alt="">
+              <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/location-white_ysz.png" border="0" alt="آپلود عکس" /></a>
               <span>
                 علامه حلی 2، دوره اول
               </span>
@@ -124,7 +124,7 @@
           </div>
           <div class="col-md-4">
             <a href="">
-              <img src="images/telephone-white.png" alt="">
+              <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/telephone-white_hgje.png" border="0" alt="آپلود عکس" /></a>
               <span>
                 09122502737 (سرگروه)
               </span>
@@ -132,7 +132,7 @@
           </div>
           <div class="col-md-4">
             <a href="">
-              <img src="images/envelope-white.png" alt="">
+              <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/envelope-white_zpvs.png" border="0" alt="آپلود عکس" /></a>
               <span>
                 behsafarinezhad@gmail.com (سرگروه)
               </span>
@@ -155,22 +155,17 @@
           <div class="info_social">
             <div>
               <a href="">
-                <img src="images/fb.png" alt="">
+                <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/fb_a2dr.png" border="0" alt="آپلود عکس" /></a>
+              </a>
+            </div>
+            <div>
+              <a href="https://www.linkedin.com/in/behrad-safarinezhad-854567307/">
+                <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/linkedin_r54n.png" border="0" alt="آپلود عکس" /></a>
               </a>
             </div>
             <div>
               <a href="">
-                <img src="images/twitter.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/linkedin.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/instagram.png" alt="">
+                <a href="https://uupload.ir/" target="_blank"><img src="https://s6.uupload.ir/files/instagram_vjay.png" border="0" alt="آپلود عکس" /></a>
               </a>
             </div>
           </div>
