--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
         <div class="my-2 wow animate__animated animate__fadeInUp" data-wow-duration="2s" data-wow-delay="1.5s">
           <span class="d-inline-block my-2 text-white fs-4 mx-2">0912-250-2737</span>
           <span class="d-inline-block my-2 text-white fs-4 mx-2">تهران، شمیران نو، علامه حلی 2</span>
+          <p class="lh-lg fs-14 my-3 text-white">behradsafarinezhad@gmail.com (ایمیل سرگروه)</p>
         </div>
       </div>
     </div>
