--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@
         <h1 class="example display-1 text-white en-font">دربــــاره مــــا</h1>
         <a href="index.html" class="read-more position-relative d-inline-block mt-4 mb-3 text-white wow animate__animated animate__fadeInUp" data-wow-duration="2s" data-wow-delay="1.5s">بازگشت به صفحه اصلی </a>
         <div class="my-2 wow animate__animated animate__fadeInUp" data-wow-duration="2s" data-wow-delay="1.5s">
-          <p class="lh-lg fs-14 my-3 text-white">تیم ما یک تیم دانش‌آموزی 4 نفره‌ی با انگیزه ست که همگی محصلانِ مدرسه علامه حلی 2، دوره اول هستیم. هدف اول این پروژه، کمک به درست نوشتن مردم کشورمان بود، و همچنین کمک به فراموش نشدن زبان فارسی درست و اصیل، با کمک خداوند متعال به این هدف رسیده ایم و اپلیکیشن ویراستو را در خدمت عموم قرار داده ایم تا در نوشتن مقاله ها و نامه های مهم، غلط های املایی کمتری داشته باشید.</p>
+          <p class="lh-lg fs-14 my-3 text-white">تیم پژوهشی 4 نفره‌ی دبیرستان علامه حلی 2. هدف اصلی این پروژه، خلق یک ابزار چابک و حرفه‌ای جهت کنترل و اصلاح متون فارسی می‌باشد. جامعه مخاطب این اپلیکیشن شامل تمامی دانشجویان، دانش‌آموزان و تمامی اهل قلم که با تولید و تایپ متون فارسی در ارتباط هستند می‌باشد. هدف جانبی این اپ، کمک به فراموش نشدن زبان فارسی درست و اصیل بوده است. از ویژگی های مهم و متمایز اپلیکیشن "ویراستو" می‌توانیم به توانایی تطابق با ورودی و خروجی‌های پی‌دی‌اف، امکان شخصی‌سازی فضای بصری برنامه، خروجی صوتی متن نوشته شده و در آینده اتصال به هوش مصنوعی های مطرح جهانی می‌باشد. ما به طور مستمر در تلاشیم با ارائه نسخه های بهتر و گسترده تر کردن جامعه کاربران خود به اهداف تعیین شده این پروژه برسیم.</p>
+          <p class="lh-lg fs-40 my-3 text-white">از دانلود رایگان ویراستو لذت ببرید!</p>
         </div>
       </div>
     </div>
